--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,5 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "plugin:import/errors",
-    "plugin:import/warnings",
-    "prettier"
-  ],
+  "extends": ["next/core-web-vitals", "plugin:import/errors", "plugin:import/warnings", "prettier"],
   "rules": {
     "import/order": [
       "error",
