--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}'",
     "test": "jest",
     "sb": "start-storybook -p 6006",
-    "sb:build": "build-storybook"
+    "sb:build": "build-storybook",
+    "gen:commons": "hygen component commons"
   },
   "dependencies": {
     "@next/font": "13.1.1",
@@ -42,6 +43,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-storybook": "^0.6.8",
     "husky": "^8.0.2",
+    "hygen": "^6.2.11",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "lint-staged": "^13.1.0",
