--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "gen:commons": "hygen component commons"
   },
   "dependencies": {
-    "@next/font": "13.1.1",
+    "@next/font": "^13.3.0",
     "envsafe": "^2.0.3",
-    "next": "13.1.1",
+    "next": "^13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
@@ -33,16 +33,16 @@
     "@storybook/react": "^6.5.15",
     "@storybook/testing-library": "^0.0.13",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "babel-loader": "^8.3.0",
-    "eslint": "8.30.0",
-    "eslint-config-next": "13.1.1",
+    "@testing-library/react": "^14.0.0",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
+    "babel-loader": "^9.1.2",
+    "eslint": "^8.38.0",
+    "eslint-config-next": "^13.3.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-storybook": "^0.6.8",
+    "eslint-plugin-storybook": "^0.6.11",
     "husky": "^8.0.2",
     "hygen": "^6.2.11",
     "jest": "^29.3.1",
