--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "next": "^13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
